package com.shubham.app.connectionpool.ideal.entity;

public enum State {
    IDLE, OCCUPIED
}
